[package]
name = "t1ha"
version = "0.1.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
edition = "2018"
license = "zlib License"
readme = "README.md"
repository = "https://github.com/flier/rust-t1ha"
homepage = "https://github.com/flier/rust-t1ha"
documentation = "http://doc.rust-lang.org/t1ha"
keywords = ["hash", "t1ha"]
categories = ["algorithms", "no-std"]
build = "build.rs"
exclude = ["/.travis.yml", "/appveyor.yml"]
description = "An implementation of the T1AH (Fast Positive Hash) hash function."

[lib]
bench = false

[badges]
travis-ci = { repository = "flier/rust-t1ha" }
appveyor = { repository = "flier/rust-t1ha", project_name = "flier/rust-t1ha" }

[features]
default = ["std", "runtime_select"]
std = []
unaligned_access = []
runtime_select = ["lazy_static"]

[dependencies]
cfg-if = "0.1"
lazy_static = { version = "1.3", optional = true }

[dependencies.num-traits]
version = "0.2"
default-features = false

[dev-dependencies]
lazy_static = "1.3"
criterion = "0.2"
metrohash = "1.0"
farmhash = "1.1"
murmur3 = "0.4"
fnv = "1.0"
xxhash2 = "0.1"
twox-hash = "1.1"
seahash = "3.0"
fxhash = "0.2"
ahash = "0.1"
rustc-hash = "1.0"

[build-dependencies]
rustc_version = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"
rustc-args = ["-C target-feature=aes,avx,avx2"]

[[bench]]
name = "t1ha"
harness = false

[[bench]]
name = "hash"
harness = false
